Fixed intro overflow Changed roadmap: moved multisig to "todo"

--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -10,9 +10,9 @@ body, html {
 .intro-header {
 	background-image: linear-gradient(120deg, $pascal-color 0%, lighten($pascal-color, 10) 100%);
 	z-index: -2;
-	&:before
+	overflow: hidden;
+	.pasc-bg
 	{
-		content: "";
 		position: absolute;
 		width: 200%;
 		height: 200%;
